infra/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: tasks.dev
      http:
        paths:
          - path: /(auth|tasks)/?(.*)
            backend:
              serviceName: tasks-srv
              servicePort: 3000
